# rust-roguelike

./: Cargo.toml
src/: containers.rs  ecs.rs  engine.rs  engine_temp.rs  fence.rs  game.rs  input.rs  main.rs  math.rs  renderer.rs
src/containers/: sparse_set.rs
src/ecs/: component_manager.rs  components.rs  entity.rs  systems.rs  world.rs
src/ecs/components/: component.rs  transform.rs
src/engine_temp/: containers.rs  engine.rs  fence.rs
src/engine_temp/containers/: bit_set.rs  sparse_set.rs
src/engine_temp/ecs/: component_manager.rs  components.rs  world.rs
src/engine_temp/ecs/components/: component.rs  sprite.rs  transform.rs
src/engine_temp/game/: state.rs  state_machine.rs
src/engine_temp/math/: vector2.rs
src/game/: game.rs  state.rs  state_machine.rs
src/renderer/: colours.rs  crossterm.rs  game_renderer.rs  render_system.rs  texture.rs
src/renderer/crossterm/: 2  api.rs  colour.rs  command.rs  command_buffer.rs  device_settings.rs  display_engine.rs  render_engine.rs  swapchain.rs
