[package]
authors = ["Bailey Danyluk"]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version="1.3.0", features=["v4", "fast-rng", "serde"] }
thiserror = { version="1.0" }
serde = { version="1.0", features=["derive"] }
serde_json = { version="1.0" }
crossterm = { version="0.26.1" }
log = { version="0.4.17" }
simplelog = { version="^0.12.0" }
